# code-gen

./: .env.template  .gitignore  Dockerfile  README.md  build-image.sh
backend/: README.md  app.py  app_dev.py  config.py  extension.py  generator.py  generators.py  models.py  prompts.py  pyproject.toml  requirements.txt
backend/.devcontainer/: devcontainer.json
backend/codegen/: app.py  app_dev.py  extension.py  generators.py  models.py  prompts.py
backend/codgen/: config.py
cg-deploy/: .env.template  docker-compose.yaml
codegen/: README.md  generator.py  replit_demo.py  requirements.txt
codegen/.devcontainer/: devcontainer.json
copilot/.devcontainer/: devcontainer.json
deployment/: .env.template  docker-compose.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/.devcontainer/: devcontainer.json
frontend/src/: App.tsx
frontend/src/components/: ApiConfigSetting.tsx  BackendBaseUrlSetting.tsx  BackendConfigSetting.tsx  Common.css  Generator.tsx  Home.css  Home.tsx  Markdown.css  Markdown.tsx  Setting.css  Setting.tsx  SettingInfo.tsx  Template.css  Template.tsx  TemplateEditor.tsx
frontend/src/context/: SettingContext.tsx  SettingProvider.tsx
frontend/src/pages/home/: Home.tsx
frontend/src/services/: backend.ts
frontend/src/styles/: Common.css
frontend/src/types/: config.ts
fs-copilot/: .env.template  README.md  docker-compose.yaml  requirements.txt
lc-copilot/: .env.template  docker-compose.yaml
replit/: replit_demo.py
vl-copilot/: .env.template  docker-compose.yaml
(+11 files in other folders)
