[project]
name = "codegen"
version = "0.1.0"
description = "Code Generator Demo"
authors = [
    {name="Jianshao"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.127.0"
uvicorn = "^0.40.0"
dotenv = "^0.9.9"
ollama = "^0.6.1"
openai = "^2.14.0"
google-genai = "^1.56.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
